Implement dark mode via Bootstrap (#61)
* update bootstrap to v5.3.0-alpha1

* got the toggle button working

* switch button to use bootstrap, add initial JS script

* got everything almost working

* got all text elements working as intended

* set the lighthouse version to 7.0.0

* clean up the code and add comments

* prettify the dark mode button

* relocate light switch

* reverse the logic to get the button working correctly

* fix SonarCloud code smells

* add webfonts for the default font-face

* change classes to be color-mode compatible

* move the lightswitch toggler

* switched from toggler to dropdown

* remove the check2 icon

* remove the unnecessary css

* change svg icon color depending on light mode

* visually change color mode dropdown button

* remove font-awesome

* Update Bootstrap to 5.3.1

* Replace deprecated Bootstrap classes

* Update color mode picker

* Fix some incompatible styles

* Use .text-danger-emphasis for required fields instead of .text-danger, and also adjust color for light mode

* Adjust branding colors

* Improve "You" badge

* Readjust branding colors

---------

Co-authored-by: Doug Waldron <douglas.waldron@dnr.ga.gov>

--- a/src/WebApp/Pages/Account/Index.cshtml
+++ b/src/WebApp/Pages/Account/Index.cshtml
@@ -37,12 +37,12 @@ else
 {
     <p>Your account has the following application roles.</p>
 
-    <dl class="p-3 border rounded-3 bg-light">
+    <dl class="p-3 border rounded-3 bg-light-subtle">
         @foreach (var role in Model.Roles)
         {
             <dt>@role.DisplayName</dt>
             <dd>
-                <p class="text-muted">@role.Description</p>
+                <p class="text-body-secondary">@role.Description</p>
             </dd>
         }
     </dl>
