--- a/src/WebApp/Pages/Account/Login.cshtml
+++ b/src/WebApp/Pages/Account/Login.cshtml
@@ -11,7 +11,7 @@
     State of Georgia employees only.
 </p>
 
-<div class="p-5 bg-light border rounded-3 mt-5 mb-5">
+<div class="p-5 bg-light-subtle border rounded-3 mt-5 mb-5">
     <h1 class="display-4">Sign in using your work account</h1>
 
     <form id="external-account" asp-page="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post">
