--- a/src/WebApp/Pages/Admin/Users/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Index.cshtml
@@ -12,7 +12,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="p-3 rounded-3 bg-light">
+<div class="p-3 rounded-3 bg-light-subtle">
     <form method="get" asp-page-handler="Search" asp-fragment="SearchResults">
         <div class="row">
             <div class="col-md mb-3">
@@ -76,7 +76,7 @@
                     <partial name="Shared/_PaginationNavAndCount" model="((IPaginatedResult)Model.SearchResults, Model.Spec.AsRouteValues())" />
                 </caption>
 
-                <thead class="table-light">
+                <thead>
                 <tr>
                     <th scope="col">
                         <a asp-fragment="SearchResults" asp-all-route-data="Model.Spec.AsRouteValues()" asp-route-handler="search"
@@ -97,16 +97,16 @@
                 </tr>
                 </thead>
 
-                <tbody>
+                <tbody class="table-group-divider">
                 @foreach (var item in Model.SearchResults.Items)
                 {
                     <tr class="@(item.Id == Model.HighlightId ? "list-group-item-warning" : !item.Active ? "bg-secondary bg-opacity-25" : "")">
                         <td>
+                            <a asp-page="Details" asp-route-id="@item.Id">@item.SortableFullName</a>
                             @if (item.Email.Equals(User.Identity?.Name))
                             {
-                                <span class="badge text-bg-info">YOU</span>
+                                <span class="badge bg-info-subtle border border-info-subtle text-info-emphasis rounded-pill">You</span>
                             }
-                            <a asp-page="Details" asp-route-id="@item.Id">@item.SortableFullName</a>
                         </td>
                         <td>@item.Email</td>
                         <td>@Html.DisplayFor(m => item.OfficeName, TemplateNames.StringOrNone)</td>
