--- a/src/WebApp/Pages/Admin/Users/EditRoles.cshtml
+++ b/src/WebApp/Pages/Admin/Users/EditRoles.cshtml
@@ -21,7 +21,7 @@
     <dd class="col-sm-9">@Html.DisplayFor(m => m.OfficeName, "StringOrNone")</dd>
 </dl>
 
-<div class="p-3 border rounded-3 bg-light mb-3">
+<div class="p-3 border rounded-3 bg-light-subtle mb-3">
     <form method="post">
         <div asp-validation-summary="All" class="alert alert-danger" role="alert">
             Roles update failed:
