--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -1,19 +1,57 @@
 /* Branding colors
 -------------------------------------------------- */
-.bg-brand {
-    background-color: #671010;
+
+/* Light mode theme colors */
+.text-bg-brand {
+    background-color: #f8d7da;
+    color: #000;
 }
 
-.bg-brand a {
-    color: #ffd5d5;
-}
-
-.bg-brand a:hover, .bg-brand a:focus {
-    color: #ffb6b6;
-}
-
-.text-brand {
+.text-bg-brand a {
     color: #671010;
+}
+
+.text-bg-brand a:hover, .text-bg-brand a:focus {
+    color: #773030;
+}
+
+.text-bg-brand a:active {
+    color: #875050;
+}
+
+.text-bg-brand .dropdown-item:active {
+    color: #fff;
+}
+
+.text-bg-brand .nav-link:focus-visible {
+    box-shadow: 0 0 0 .25rem rgba(67, 11, 11, 0.63);
+}
+
+/* Dark mode theme colors */
+[data-bs-theme="dark"] .text-bg-brand {
+    background-color: rgb(57, 7, 7);
+    color: #fff;
+}
+
+[data-bs-theme="dark"] .text-bg-brand a {
+    color: #c9a1a1;
+}
+
+[data-bs-theme="dark"] .text-bg-brand a:hover,
+[data-bs-theme="dark"] .text-bg-brand a:focus {
+    color: #fccece;
+}
+
+[data-bs-theme="dark"] .text-bg-brand a:active {
+    color: #ffacac;
+}
+
+[data-bs-theme="dark"] .text-bg-brand .nav-link {
+    color: #fff;
+}
+
+[data-bs-theme="dark"] .text-bg-brand .nav-link:focus-visible {
+    box-shadow: 0 0 0 .25rem rgba(255, 230, 230, 0.57);
 }
 
 /* Adjust font sizing
@@ -30,24 +68,19 @@ html {
 
 /* Fix color accessibility
 -------------------------------------------------- */
-a {
-    color: #0366d6;
-}
 
-.btn-primary {
+[data-bs-theme="light"] .btn-primary {
     color: #fff;
     background-color: #1b6ec2;
     border-color: #1861ac;
 }
 
-.text-warning {
+[data-bs-theme="light"] .text-warning {
     color: rgb(150, 113, 0) !important;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+[data-bs-theme="light"] .text-danger-emphasis {
+    color: rgb(220, 53, 69) !important;
 }
 
 /* Sticky footer
@@ -59,7 +92,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
-    /*margin-bottom: 60px;*/ /* Single height for one footer section */
+    /* margin-bottom: 60px;*/ /* Single height for one footer section */
     margin-bottom: 120px; /* Double height for two footer sections */
 }
 
@@ -130,11 +163,12 @@ a[target]::after {
     content: ' \1f5d7';
 }
 
+/* can be suppressed */
 a[target].no-external-link::after {
     content: none;
 }
 
-/* Hover style for links with underline removed
+/* Add outline on hover for links with underline removed
 -------------------------------------------------- */
 a.text-decoration-none:hover {
     outline: 2px solid;
@@ -179,6 +213,14 @@ a.text-decoration-none:hover {
     .banner-test-site::after {
         content: "— Not for public distribution";
     }
+}
+
+/* Bootstrap Icons
+-------------------------------------------------- */
+.bi {
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
 }
 
 /* Fix for Bootstrap textarea with "floating" label
