--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -1,39 +1,45 @@
 /* Branding colors
 -------------------------------------------------- */
 
+/* Change the base-hue variable to set all branding colors. */
+:root {
+    --base-hue: 0deg;
+}
+
 /* Light mode theme colors */
 .text-bg-brand {
-    background-color: hsl(0, 75%, 91%);    
+
+    background-color: hsl(var(--base-hue), 75%, 91%);
     color: hsl(210, 11%, 15%);
 }
 
 .text-bg-brand a {
-    color: hsl(0, 75%, 23%);
+    color: hsl(var(--base-hue), 75%, 23%);
 }
 
 .text-bg-brand a:hover,
 .text-bg-brand a:focus {
-    color: hsl(0, 100%, 25%);
+    color: hsl(var(--base-hue), 100%, 25%);
 }
 
 .text-bg-brand a:active {
-    color: hsl(0, 100%, 15%);
+    color: hsl(var(--base-hue), 100%, 15%);
 }
 
 .text-bg-brand .dropdown-item {
-    color: hsl(0, 75%, 35%);
+    color: hsl(var(--base-hue), 75%, 35%);
 }
 
 .text-bg-brand .dropdown-item:focus,
 .text-bg-brand .dropdown-item:hover {
-    background-color: hsl(0, 100%, 15%);
-    color: hsl(0, 75%, 95%);
+    background-color: hsl(var(--base-hue), 100%, 15%);
+    color: hsl(var(--base-hue), 75%, 95%);
 }
 
 .text-bg-brand .dropdown-item.active,
 .text-bg-brand .dropdown-item:active {
-    color: hsl(0, 0%, 0%);
-    background-color: hsl(0, 75%, 70%)
+    color: hsl(var(--base-hue), 0%, 0%);
+    background-color: hsl(var(--base-hue), 75%, 70%)
 }
 
 .text-bg-brand .nav-link,
@@ -41,61 +47,61 @@
 .text-bg-brand .nav-link:focus,
 .text-bg-brand .navbar-nav .nav-link.active,
 .text-bg-brand .navbar-nav .nav-link.show {
-    color: hsl(0, 10%, 0%);
+    color: hsl(var(--base-hue), 20%, 20%);
 }
 
 .text-bg-brand .navbar-brand:focus-visible,
 .text-bg-brand .nav-link:focus-visible {
-    box-shadow: 0 0 0 .25rem hsla(0, 10%, 0%, .57);
+    box-shadow: 0 0 0 .25rem hsla(var(--base-hue), 10%, 0%, .57);
 }
 
 /* Dark mode theme colors */
 [data-bs-theme="dark"] .text-bg-brand {
-    background-color: hsl(0, 75%, 13%);
-    color: hsl(0, 0%, 100%);
+    background-color: hsl(var(--base-hue), 75%, 13%);
+    color: hsl(var(--base-hue), 0%, 100%);
 }
 
 [data-bs-theme="dark"] .text-bg-brand a {
-    color: hsl(0, 100%, 92%);
+    color: hsl(var(--base-hue), 100%, 92%);
 }
 
 [data-bs-theme="dark"] .text-bg-brand a:hover,
 [data-bs-theme="dark"] .text-bg-brand a:focus {
-    color: hsl(0, 100%, 85%);
+    color: hsl(var(--base-hue), 100%, 85%);
 }
 
 [data-bs-theme="dark"] .text-bg-brand a:active {
-    color: hsl(0, 100%, 95%);
+    color: hsl(var(--base-hue), 100%, 95%);
 }
 
 [data-bs-theme="dark"] .text-bg-brand .dropdown-item {
-    color: hsl(0, 75%, 90%);
+    color: hsl(var(--base-hue), 75%, 90%);
 }
 
 [data-bs-theme="dark"] .text-bg-brand .dropdown-item:focus,
 [data-bs-theme="dark"] .text-bg-brand .dropdown-item:hover {
-    color: hsl(0, 75%, 90%);
-    background-color: hsl(0, 10%, 19%);
+    color: hsl(var(--base-hue), 75%, 90%);
+    background-color: hsl(var(--base-hue), 10%, 19%);
 }
 
 [data-bs-theme="dark"] .text-bg-brand .dropdown-item.active,
 [data-bs-theme="dark"] .text-bg-brand .dropdown-item:active {
-    color: hsl(0, 0%, 100%);
-    background-color: hsl(0, 65%, 29%)
+    color: hsl(var(--base-hue), 0%, 100%);
+    background-color: hsl(var(--base-hue), 65%, 29%)
 }
 
 [data-bs-theme="dark"] .text-bg-brand .nav-link {
-    color: hsl(0, 0%, 100%);
+    color: hsl(var(--base-hue), 0%, 100%);
 }
 
 [data-bs-theme="dark"] .text-bg-brand .navbar-nav .nav-link.active,
 [data-bs-theme="dark"] .text-bg-brand .navbar-nav .nav-link.show {
-    color: hsl(0, 0%, 100%);
+    color: hsl(var(--base-hue), 0%, 100%);
 }
 
 [data-bs-theme="dark"] .text-bg-brand .navbar-brand:focus-visible,
 [data-bs-theme="dark"] .text-bg-brand .nav-link:focus-visible {
-    box-shadow: 0 0 0 .25rem hsla(0, 10%, 100%, .57);
+    box-shadow: 0 0 0 .25rem hsla(var(--base-hue), 10%, 100%, .57);
 }
 
 /* Adjust font sizing
@@ -113,7 +119,7 @@ html {
 /* Fix color accessibility
 -------------------------------------------------- */
 [data-bs-theme="light"] .btn-primary {
-    color: hsl(0, 0%, 100%);
+    color: hsl(var(--base-hue), 0%, 100%);
     background-color: hsl(210, 76%, 43%);
     border-color: hsl(210, 76%, 38%);
 }
@@ -191,24 +197,25 @@ a[target].no-external-link::after {
     height: 26px;
     top: 0;
     z-index: 2001;
-    color: hsl(0, 0%, 20%);
+    color: hsl(var(--base-hue), 0%, 20%);
     font-weight: 700;
     font-size: 16px;
     font-family: system-ui;
     text-transform: uppercase;
     text-align: center;
-    text-shadow: 0 0 4px hsl(0, 0%, 100%);
+    text-shadow: 0 0 4px hsl(var(--base-hue), 0%, 100%);
     background: repeating-linear-gradient(135deg, hsl(50, 90%, 64%), hsl(50, 90%, 64%) 10px, hsl(50, 100%, 75%) 10px, hsl(50, 100%, 75%) 20px);
     box-shadow: inset 0 -3px 7px hsla(47, 79%, 28%, 0.37);
     padding: 1px 0;
 }
+
 .banner-test-site ~ header {
     padding-top: 26px;
 }
 
 [data-bs-theme="dark"] .banner-test-site {
-    color: hsl(0, 0%, 100%);
-    text-shadow: 0 0 6px hsl(0, 0%, 0%);
+    color: hsl(var(--base-hue), 0%, 100%);
+    text-shadow: 0 0 6px hsl(var(--base-hue), 0%, 0%);
     background: repeating-linear-gradient(135deg, hsl(50, 90%, 36%), hsl(50, 90%, 36%) 10px, hsl(50, 40%, 25%) 10px, hsl(50, 40%, 25%) 20px);
 }
 
