Update to App Library v3.5.0

--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
@@ -52,13 +52,13 @@ else
         <tbody>
         @foreach (var item in Model.Items)
         {
-            <tr class="@(item.Id == Model.HighlightId ? "list-group-item-warning" : !item.Active ? "bg-secondary bg-opacity-25" : "")">
+            <tr class="@(item.Active ? "" : "table-secondary")">
                 <td>
                     @if (item.Id == Model.HighlightId)
                     {
                         @:👉 
                     }
-                    @Html.DisplayFor(m => item.Name, "StringOrNone")
+                    @Html.DisplayFor(m => item.Name, DisplayTemplate.StringOrNone)
                 </td>
                 <td>
                     @Html.DisplayFor(m => item.Active, DisplayTemplate.BoolActive)
