--- a/src/WebApp/Pages/Shared/DisplayTemplates/NameOrNone.cshtml
+++ b/src/WebApp/Pages/Shared/DisplayTemplates/NameOrNone.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyApp.AppServices.DtoBase.IDtoHasNameProperty?
+﻿@model GaEpd.AppLibrary.Domain.Entities.INamedEntity?
 @if (Model is null)
 {
     <span class="text-body-secondary">none</span>
