--- a/src/WebApp/Pages/Customers/EditContact.cshtml
+++ b/src/WebApp/Pages/Customers/EditContact.cshtml
@@ -68,7 +68,7 @@
         </div>
 
         <div class="mt-3 mb-1">
-            <button asp-page-handler="SaveContact" id="SubmitButton" type="submit" class="btn btn-primary col-6 col-sm-4 col-lg-3 me-2">Save Changes</button>
+            <button id="SubmitButton" type="submit" class="btn btn-primary col-6 col-sm-4 col-lg-3 me-2">Save Changes</button>
             <a asp-page="Details" asp-route-id="@Model.CustomerView.Id.ToString()" asp-fragment="contacts" class="btn btn-outline-secondary">Cancel</a>
         </div>
         <div class="text-danger-emphasis mt-3">* denotes a required field</div>
