Remove Id from update DTOs (Customer and Contact)

--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -41,6 +41,7 @@ else
                 <a asp-page="/Admin/Maintenance/Index">Site Maintenance</a>
             </li>
             <li>
+                @* ReSharper disable once Html.PathError *@
                 <a href="api-docs/">API Docs</a>
             </li>
         </ul>
