--- a/src/WebApp/Pages/Customers/Edit.cshtml
+++ b/src/WebApp/Pages/Customers/Edit.cshtml
@@ -57,10 +57,9 @@
 
         <div class="mt-3 mb-1">
             <button type="submit" class="btn btn-primary col-6 col-sm-4 col-lg-3 me-2">Save Changes</button>
-            <a asp-page="Details" asp-route-id="@Model.Item.Id.ToString()" class="btn btn-outline-secondary">Cancel</a>
+            <a asp-page="Details" asp-route-id="@Model.Id.ToString()" class="btn btn-outline-secondary">Cancel</a>
         </div>
         <div class="text-danger-emphasis mt-3">* denotes a required field</div>
-        <input asp-for="Item.Id" type="hidden" />
     </form>
 </div>
 
