--- a/src/WebApp/Pages/Customers/EditContact.cshtml
+++ b/src/WebApp/Pages/Customers/EditContact.cshtml
@@ -22,10 +22,7 @@
 
 <form method="post">
     <div class="p-3 border rounded-3 bg-light-subtle mb-3">
-        @if (Model.Handler == EditContactModel.Handlers.EditContact)
-        {
-            <div asp-validation-summary="All" class="alert alert-danger" role="alert"></div>
-        }
+        <div asp-validation-summary="All" class="alert alert-danger" role="alert"></div>
 
         <div class="row mt-2">
             <p class="form-text"><span class="text-danger-emphasis">*</span> At least a name or title must be included in order to save a contact.</p>
@@ -68,13 +65,11 @@
         </div>
 
         <div class="mt-3 mb-1">
-            <button id="SubmitButton" type="submit" class="btn btn-primary col-6 col-sm-4 col-lg-3 me-2">Save Changes</button>
+            <button asp-fragment="@Model.Id" id="SubmitButton" type="submit" class="btn btn-primary col-6 col-sm-4 col-lg-3 me-2">Save Changes</button>
             <a asp-page="Details" asp-route-id="@Model.CustomerView.Id.ToString()" asp-fragment="contacts" class="btn btn-outline-secondary">Cancel</a>
         </div>
         <div class="text-danger-emphasis mt-3">* denotes a required field</div>
     </div>
-
-    <input asp-for="ContactUpdate.Id" type="hidden">
 </form>
 
 @section Scripts {
