--- a/src/WebApp/Pages/Admin/Users/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Edit.cshtml
@@ -32,10 +32,9 @@
         </div>
         <div class="mt-3">
             <button type="submit" class="btn btn-primary col-sm-3 me-2">Update Info</button>
-            <a asp-page="Details" asp-route-id="@Model.UpdateStaff.Id" class="btn btn-outline-secondary col-md-2">Cancel</a>
+            <a asp-page="Details" asp-route-id="@Model.Id.ToString()" class="btn btn-outline-secondary col-md-2">Cancel</a>
         </div>
         <div class="text-danger-emphasis mt-3">* denotes a required field</div>
-        <input asp-for="UpdateStaff.Id" type="hidden" />
     </form>
 </div>
 
