Fix table shading in dark mode for deleted/inactive rows

--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
@@ -52,7 +52,7 @@ else
         <tbody>
         @foreach (var item in Model.Items)
         {
-            <tr class="@(item.Active ? "" : "table-secondary")">
+            <tr class="@(item.Active ? "" : "bg-secondary-subtle")">
                 <td>
                     @if (item.Id == Model.HighlightId)
                     {
