--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -108,6 +108,14 @@
     background-color: var(--bs-secondary-bg-subtle) !important;
 }
 
+/* Accessibility fix for "warning" button on medium/light background
+-------------------------------------------------------------------- */
+html:not([data-bs-theme="dark"]) .btn-outline-warning {
+    --bs-btn-color: #b98b00;
+    --bs-btn-border-color: #b98b00;
+    --bs-btn-bg: #fff;
+}
+
 /* Adjust font sizing
 -------------------------------------------------- */
 html {
@@ -182,15 +190,85 @@ html:not([data-bs-theme="dark"]) .bg-dark-subtle .text-danger-emphasis {
     white-space: pre-line !important;
 }
 
+.text-decoration-hover {
+    text-decoration: none !important;
+}
+
+.text-decoration-hover:hover, .text-decoration-hover:focus {
+    text-decoration: underline !important;
+}
+
 /* External links
 -------------------------------------------------- */
 a[target]::after {
-    content: ' \1f5d7';
+    content: '\00a0\1f5d7';
 }
 
 /* Suppress external link icon */
 footer a[target]::after, a[target].no-external-link::after {
     content: none;
+}
+
+/* Fix conflicting table border classes
+-------------------------------------------------- */
+.table-borderless .table-group-divider {
+    border-top-width: calc(var(--bs-border-width) * 2);
+}
+
+/* Callouts
+-------------------------------------------------- */
+/* Adapted from the Bootstrap Docs (https://getbootstrap.com/).
+  Licensed under the Creative Commons Attribution 3.0 Unported License. */
+
+:root, [data-bs-theme="light"] {
+    --callout-link: 10, 88, 202;
+}
+
+[data-bs-theme="dark"] {
+    --callout-link: 110, 168, 254;
+}
+
+.callout {
+    --bs-link-color-rgb: var(--callout-link);
+    --callout-color: var(--bs-body-color);
+    --callout-bg: var(--bs-dark-bg-subtle);
+    --callout-border: var(--bs-dark-border-subtle);
+    padding: 1.25rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    color: var(--callout-color, inherit);
+    background-color: var(--callout-bg, var(--bs-gray-200));
+    border-left: 0.25rem solid var(--callout-border, var(--bs-gray-400));
+}
+
+.callout > :last-child {
+    margin-bottom: 0;
+}
+
+.callout + .callout {
+    margin-top: -.25rem;
+}
+
+.callout .highlight {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.callout-info {
+    --callout-color: var(--bs-info-text-emphasis);
+    --callout-bg: var(--bs-info-bg-subtle);
+    --callout-border: var(--bs-info-border-subtle);
+}
+
+.callout-warning {
+    --callout-color: var(--bs-warning-text-emphasis);
+    --callout-bg: var(--bs-warning-bg-subtle);
+    --callout-border: var(--bs-warning-border-subtle);
+}
+
+.callout-danger {
+    --callout-color: var(--bs-danger-text-emphasis);
+    --callout-bg: var(--bs-danger-bg-subtle);
+    --callout-border: var(--bs-danger-border-subtle);
 }
 
 /* Banner for test site
@@ -238,9 +316,11 @@ details.card:not([open]) summary.card-header {
 /* Bootstrap Icons
 -------------------------------------------------- */
 .bi {
-    width: 1em;
-    height: 1em;
+    width: 1.1em;
+    height: 1.1em;
     fill: currentColor;
+    vertical-align: text-bottom;
+    overflow: visible !important;
 }
 
 /* Fix for Bootstrap textarea with "floating" label
@@ -249,10 +329,22 @@ details.card:not([open]) summary.card-header {
     height: auto;
 }
 
+/* Checkbox cursors and disabled labels
+-------------------------------------------------- */
+[type="checkbox"], label:has([type="checkbox"]) {
+    cursor: pointer;
+}
+
+/* Use disabled attribute in addition to :disabled pseudo-class. See https://github.com/twbs/bootstrap/issues/28247 */
+label:has([disabled]), label:has(:disabled) {
+    cursor: default;
+    opacity: .7;
+}
+
 /* Validation summary
 -------------------------------------------------- */
 .validation-summary-valid {
-    display: none;
+    display: none !important;
 }
 
 .validation-summary-errors ul {
@@ -300,3 +392,22 @@ Print styles
 /* ==================================================
 Additional application-specific styles
 ================================================== */
+
+/* SVG icons
+-------------------------------------------------- */
+svg:not(:root).svg-icon {
+    overflow: visible;
+}
+
+svg:not(:root) {
+    overflow: hidden;
+}
+
+.svg-icon {
+    display: inline-block;
+    font-size: inherit;
+    overflow: visible;
+    vertical-align: middle;
+    width: 1.5em;
+    height: 1.5em;
+}
