--- a/src/WebApp/Pages/Account/ExternalLogin.cshtml
+++ b/src/WebApp/Pages/Account/ExternalLogin.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using MyApp.WebApp.Pages.Shared.DisplayTemplates
 @model ExternalLoginModel
 @{
     ViewData["Title"] = "Account Error";
@@ -18,19 +19,19 @@
         <p>Data received from work account (for diagnostic purposes):</p>
         <dl class="row">
             <dt class="col-sm-3">@Html.DisplayNameFor(_ => Model.DisplayFailedUser.Email)</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.Email, "StringOrNone")</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.Email, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })</dd>
 
             <dt class="col-sm-3">@Html.DisplayNameFor(_ => Model.DisplayFailedUser.UserName)</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.UserName, "StringOrNone")</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.UserName, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })</dd>
 
             <dt class="col-sm-3">@Html.DisplayNameFor(_ => Model.DisplayFailedUser.FamilyName)</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.FamilyName, "StringOrNone")</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.FamilyName, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })</dd>
 
             <dt class="col-sm-3">@Html.DisplayNameFor(_ => Model.DisplayFailedUser.GivenName)</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.GivenName, "StringOrNone")</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.GivenName, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })</dd>
 
-            <dt class="col-sm-3">@Html.DisplayNameFor(_ => Model.DisplayFailedUser.AzureAdObjectId)</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.AzureAdObjectId, "StringOrNone")</dd>
+            <dt class="col-sm-3">@Html.DisplayNameFor(_ => Model.DisplayFailedUser.ObjectIdentifier)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(_ => Model.DisplayFailedUser.ObjectIdentifier, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })</dd>
         </dl>
     </div>
 }
