--- a/src/WebApp/Pages/Error.cshtml
+++ b/src/WebApp/Pages/Error.cshtml
@@ -1,27 +1,19 @@
 ﻿@page "{statusCode:int?}"
-@inject IAuthorizationService AuthorizationService
-@using Microsoft.AspNetCore.Authorization
-@using MyApp.AppServices.Permissions
 @model ErrorModel
-@switch (Model.Status)
+@if (Model.Status == StatusCodes.Status404NotFound)
 {
-    case StatusCodes.Status404NotFound:
-    {
-        ViewData["Title"] = "Not Found";
-        <h1 class="text-danger-emphasis">@ViewData["Title"]</h1>
-        <p class="lead">The page you're looking for could not be found.</p>
-        break;
-    }
-    default:
-    {
-        ViewData["Title"] = "Error";
-        <h1 class="text-danger-emphasis">@ViewData["Title"]</h1>
-        <p class="lead">An error occurred while processing your request.</p>
-        break;
-    }
+    ViewData["Title"] = "Not Found";
+    <h1 class="text-danger-emphasis">@ViewData["Title"]</h1>
+    <p class="lead">The page you're looking for could not be found.</p>
+}
+else
+{
+    ViewData["Title"] = "Error";
+    <h1 class="text-danger-emphasis">@ViewData["Title"]</h1>
+    <p class="lead">An error occurred while processing your request.</p>
 }
 
-@if ((await AuthorizationService.AuthorizeAsync(User, nameof(Policies.ActiveUser))).Succeeded)
+@if (Model.ActiveUser)
 {
     <p>
         If you need assistance related to this error, please
