--- a/src/WebApp/Pages/_ViewImports.cshtml
+++ b/src/WebApp/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-@namespace MyApp.WebApp.Pages
+﻿@namespace MyApp.WebApp.Pages
 @addTagHelper *, WebOptimizer.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebApp
