--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Edit.cshtml
@@ -14,16 +14,22 @@
 
 <div class="p-3 border rounded-3 bg-light-subtle">
     <form method="post">
-        <div asp-validation-summary="All" class="alert alert-danger" role="alert"></div>
-        <div class="mb-3">
-            @Html.EditorFor(e => e.Item.Name, EditorTemplate.Input)
+        <div asp-validation-summary="All" class="alert alert-danger d-flex align-items-center" role="alert">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill me-2" viewBox="0 0 16 16">
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+            </svg>
+        </div>
+        <div class="row">
+            <div class="col-md mb-3">
+                @Html.EditorFor(model => model.Item.Name, EditorTemplate.Input)
+            </div>
         </div>
         <div class="mb-3">
-            @Html.EditorFor(e => e.Item.Active, EditorTemplate.Checkbox)
+            @Html.EditorFor(model => model.Item.Active, EditorTemplate.Checkbox)
         </div>
         <div class="mt-3 mb-1">
-            <button type="submit" class="btn btn-primary col-sm-3 me-2">Save Changes</button>
-            <a asp-page="Index" class="btn btn-outline-secondary col-md-2">Cancel</a>
+            <button type="submit" class="btn btn-primary me-2">Save Changes</button>
+            <a asp-page="Index" class="btn btn-outline-secondary">Cancel</a>
         </div>
         <div class="text-danger-emphasis mt-3">* denotes a required field</div>
         <input asp-for="OriginalName" type="hidden" />
