--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+@page
 @using MyApp.Domain.Identity
 @using MyApp.WebApp.Pages.Shared.DisplayTemplates
 @model IndexModel
@@ -6,8 +6,8 @@
     ViewData["Title"] = $"Site Maintenance: {IndexModel.ThisOption.PluralName}";
 }
 
-<p>
-    <a asp-page="../Index">← Site Maintenance</a>
+<p class="d-print-none">
+    <a asp-page="../Index" class="lead link-offset-2">← Site Maintenance</a>
 </p>
 
 <h1>@IndexModel.ThisOption.PluralName</h1>
@@ -39,14 +39,17 @@
 }
 else
 {
-    <table class="table" aria-describedby="table-description">
+    <table class="table table-hover" aria-describedby="table-description">
         <thead>
         <tr>
             <th scope="col">Name</th>
-            <th scope="col">Active</th>
-            <th scope="col">
-                <span class="visually-hidden">Actions</span>
-            </th>
+            <th scope="col">Status</th>
+            @if (Model.IsSiteMaintainer)
+            {
+                <th scope="col">
+                    <span class="visually-hidden">Actions</span>
+                </th>
+            }
         </tr>
         </thead>
         <tbody>
@@ -58,17 +61,15 @@ else
                     {
                         @:👉 
                     }
-                    @Html.DisplayFor(m => item.Name, DisplayTemplate.StringOrNone)
+                    @Html.DisplayFor(_ => item.Name, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })
                 </td>
-                <td>
-                    @Html.DisplayFor(m => item.Active, DisplayTemplate.BoolActive)
-                </td>
-                <td>
-                    @if (Model.IsSiteMaintainer)
-                    {
+                <td>@Html.DisplayFor(_ => item.Active, DisplayTemplate.BoolActive)</td>
+                @if (Model.IsSiteMaintainer)
+                {
+                    <td>
                         <a asp-page="Edit" asp-route-id="@item.Id.ToString()" class="btn btn-outline-primary btn-sm">Edit</a>
-                    }
-                </td>
+                    </td>
+                }
             </tr>
         }
         </tbody>
