--- a/src/WebApp/Pages/Admin/Users/EditRoles.cshtml
+++ b/src/WebApp/Pages/Admin/Users/EditRoles.cshtml
@@ -1,4 +1,5 @@
-﻿@page "{id:Guid?}"
+@page "{id:Guid?}"
+@using MyApp.WebApp.Pages.Shared.DisplayTemplates
 @model EditRolesModel
 @{
     ViewData["Title"] = "Edit User Roles";
@@ -15,17 +16,20 @@
     <dd class="col-sm-9">@Model.DisplayStaff.Email</dd>
 
     <dt class="col-sm-3">Phone</dt>
-    <dd class="col-sm-9">@Html.DisplayFor(m => m.DisplayStaff.Phone, "StringOrNone")</dd>
+    <dd class="col-sm-9">@Html.DisplayFor(model => model.DisplayStaff.PhoneNumber, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })</dd>
 
     <dt class="col-sm-3">Office</dt>
-    <dd class="col-sm-9">@Html.DisplayFor(m => m.OfficeName, "StringOrNone")</dd>
+    <dd class="col-sm-9">@Html.DisplayFor(model => model.OfficeName, DisplayTemplate.StringOrPlaceholder, new { Placeholder = "none" })</dd>
 </dl>
 
 <div class="p-3 border rounded-3 bg-light-subtle mb-3">
     <p>View a detailed description of <a asp-page="Roles" target="_blank">user roles and capabilities</a>.</p>
     <form method="post">
-        <div asp-validation-summary="All" class="alert alert-danger" role="alert">
-            Roles update failed:
+        <div asp-validation-summary="All" class="alert alert-danger d-flex align-items-center" role="alert">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill me-2" viewBox="0 0 16 16">
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+            </svg>
+            <div>Roles update failed:</div>
         </div>
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
