--- a/src/WebApp/Pages/Admin/Users/Roles.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Roles.cshtml
@@ -1,59 +1,68 @@
 ﻿@page
 @model RolesModel
 @{
-    ViewData["Title"] = "Users, Roles, and Capabilities";
+    ViewData["Title"] = "User Roles and Capabilities";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="mb-3">@ViewData["Title"]</h1>
 
-<h2>Public</h2>
-<p>
-    <em>Describe the capabilities available to visitors to the site who are not logged in.</em>
-</p>
+<h2 class="h4">Public</h2>
 
-<h2>User</h2>
-<p>All Users with SOG work accounts who are logged into the application can:</p>
-<ul class="pb-3">
-    <li>View a list of Users.</li>
-    <li>Edit account profile info for themselves, including changing assigned Office.</li>
-    <li>
-        <em>List additional capabilities here.</em>
-    </li>
+<p><em>Visitors</em> to this site who are not logged in can only do the following:</p>
+
+<ul>
+    <li><b>List capabilities for public visitors.</b></li>
 </ul>
 
-<h2>User Roles</h2>
-<p>Users can also be granted one or more of the following roles.</p>
+<h2 class="h4">User</h2>
+
+<p>All active <em>Users</em> with work accounts who are logged into the application can:</p>
+
 <ul>
-    <li>
-        <h3 class="h4">Staff</h3>
-        <p>Users in the <em>Staff</em> role can:</p>
-        <ul class="pb-3">
-            <li>
-                <em>List capabilities here.</em>
-            </li>
-        </ul>
-    </li>
-    <li>
-        <h3 class="h4">Manager</h3>
-        <p>Users in the <em>Manager</em> role have all the capabilities of the <em>Staff</em> role. Plus they can:</p>
-        <ul class="pb-3">
-            <li>
-                <em>List additional capabilities here.</em>
-            </li>
-        </ul>
-    </li>
-    <li>
-        <h3 class="h4">User Account Admin</h3>
-        <p>Users in the <em>User Account Admin</em> role can:</p>
-        <ul class="pb-3">
-            <li>Manage user accounts and assign roles.</li>
-        </ul>
-    </li>
-    <li>
-        <h3 class="h4">Site Maintenance</h3>
-        <p>Users in the <em>Site Maintenance</em> role can:</p>
-        <ul>
-            <li>Edit the lookup tables used for drop-down lists.</li>
-        </ul>
-    </li>
+    <li><b>List additional capabilities for Users.</b></li>
+    <li>Search for and view Application Users.</li>
+    <li>View the lists of maintenance items.</li>
+    <li>View the list of roles and capabilities.</li>
+    <li>Edit account info for themselves, including changing assigned Office.</li>
+</ul>
+
+<p>
+    Note: Users who still have current work accounts can be marked "Inactive" by a user account administrator. Inactive
+    users are not able to sign in to the application.
+</p>
+
+<h2 class="h4" id="cts-roles">Application Roles</h2>
+
+<p><em>Users</em> can be granted one or more of the following roles.</p>
+
+<h3 class="h5">Staff</h3>
+
+<p>Users in the <em>Staff</em> role can:</p>
+
+<ul>
+    <li><b>List capabilities for Staff.</b></li>
+</ul>
+
+<h3 class="h5">Manager</h3>
+
+<p>Users in the <em>Manager</em> role have all the capabilities of the <em>Staff</em> role. Plus they can:</p>
+
+<ul>
+    <li><b>List capabilities for Managers.</b></li>
+</ul>
+
+<h3 class="h5">User Account Admin</h3>
+
+<p>Users in the <em>User Account Admin</em> role can:</p>
+
+<ul>
+    <li>Manage Application User accounts and assign roles.</li>
+</ul>
+
+<h3 class="h5">Site Maintenance</h3>
+
+<p>Users in the <em>Site Maintenance</em> role can:</p>
+
+<ul>
+    <li>Edit the lookup tables used for drop-down lists.</li>
 </ul>
