--- a/src/WebApp/Pages/Shared/DisplayTemplates/County.cshtml
+++ b/src/WebApp/Pages/Shared/DisplayTemplates/County.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string?
 @if (string.IsNullOrEmpty(Model))
 {
-    <span class="text-body-secondary">[Not entered]</span>
+    <span class="text-body-secondary fw-lighter">[Not entered]</span>
 }
 else
 {
