--- a/src/WebApp/Pages/Shared/DisplayTemplates/IncompleteAddress.cshtml
+++ b/src/WebApp/Pages/Shared/DisplayTemplates/IncompleteAddress.cshtml
@@ -1,8 +1,7 @@
-﻿@using MyApp.Domain.ValueObjects
-@model MyApp.Domain.ValueObjects.IncompleteAddress?
-@if (Model is null || Model == IncompleteAddress.EmptyAddress)
+﻿@model Domain.ValueObjects.IncompleteAddress?
+@if (Model is null || Model.IsEmpty)
 {
-    <span class="text-body-secondary">[Not entered]</span>
+    <span class="text-body-secondary fw-lighter">[Not entered]</span>
 }
 else
 {
