--- a/src/WebApp/Pages/Shared/DisplayTemplates/LongDateTimeOrNotEntered.cshtml
+++ b/src/WebApp/Pages/Shared/DisplayTemplates/LongDateTimeOrNotEntered.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DateTimeOffset?
 @if (Model is null)
 {
-    <span class="text-body-secondary">[Not entered]</span>
+    <span class="text-body-secondary fw-lighter">[Not entered]</span>
 }
 else
 {
