--- a/src/WebApp/Pages/Shared/DisplayTemplates/ProbableEmailOrNotEntered.cshtml
+++ b/src/WebApp/Pages/Shared/DisplayTemplates/ProbableEmailOrNotEntered.cshtml
@@ -1,8 +1,10 @@
-﻿@using MyApp.Domain.Data
+﻿@using Domain.DataProcessing
 @model string?
+@{
+}
 @if (string.IsNullOrEmpty(Model))
 {
-    <span class="text-body-secondary">[Not entered]</span>
+    <span class="text-body-secondary fw-lighter">[Not entered]</span>
 }
 else
 {
