--- a/src/WebApp/Pages/Shared/DisplayTemplates/TruncateText.cshtml
+++ b/src/WebApp/Pages/Shared/DisplayTemplates/TruncateText.cshtml
@@ -4,7 +4,7 @@
 }
 @if (string.IsNullOrEmpty(Model))
 {
-    <span class="text-body-secondary">none</span>
+    <span class="text-body-secondary fw-lighter">none</span>
 }
 else if (Model.Length > maxLength)
 {
