--- a/src/WebApp/Pages/Admin/Users/Roles.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Roles.cshtml
@@ -31,7 +31,7 @@
     users are not able to sign in to the application.
 </p>
 
-<h2 class="h4" id="cts-roles">Application Roles</h2>
+<h2 class="h4" id="app-roles">Application Roles</h2>
 
 <p><em>Users</em> can be granted one or more of the following roles.</p>
 
