--- a/src/WebApp/Pages/Staff/EntryAction/Edit.cshtml
+++ b/src/WebApp/Pages/Staff/EntryAction/Edit.cshtml
@@ -1,11 +1,9 @@
-﻿@page "{actionId:guid?}"
-@using GaEpd.AppLibrary.Extensions
-@using MyApp.WebApp.Pages.Shared.DisplayTemplates
+﻿@page "{actionId:Guid?}"
 @using MyApp.WebApp.Pages.Shared.EditorTemplates
 @model EditActionModel
 
 @{
-    ViewData["Title"] = "Edit WorkEntry Action";
+    ViewData["Title"] = "Edit Action";
     ViewData["NoAnchors"] = "True";
 }
 
