--- a/src/WebApp/Pages/Admin/Users/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Index.cshtml
@@ -43,7 +43,7 @@
                     <label asp-for="Spec.Role" class="form-label"></label>
                 </div>
                 <div id="rolesHelpBlock" class="form-text">
-                    <a asp-page="Roles" asp-fragment="cts-roles" target="_blank">Description of roles</a>
+                    <a asp-page="Roles" asp-fragment="app-roles" target="_blank">Description of roles</a>
                 </div>
             </div>
             <div class="col-md mb-3">
