--- a/src/WebApp/Pages/Staff/EntryAction/Delete.cshtml
+++ b/src/WebApp/Pages/Staff/EntryAction/Delete.cshtml
@@ -1,8 +1,8 @@
-﻿@page "{actionId:guid?}"
+﻿@page "{actionId:Guid?}"
 @model DeleteActionModel
 
 @{
-    ViewData["Title"] = "Delete WorkEntry Action";
+    ViewData["Title"] = "Delete Action";
     ViewData["NoAnchors"] = "True";
 }
 
@@ -11,9 +11,9 @@
 </h1>
 
 <div class="p-3 border rounded-3 bg-dark-subtle text-dark-emphasis">
-    <p class="lead text-danger-emphasis font-weight-medium">Are you sure you want to delete this WorkEntry Action?</p>
+    <p class="lead text-danger-emphasis font-weight-medium">Are you sure you want to delete this Action?</p>
     <p>
-        Deleted WorkEntry actions are not removed from the database, but they are hidden from some search results and
+        Deleted Work Entry Actions are not removed from the database, but they are hidden from some search results and
         views and are not publicly available.
     </p>
 
@@ -22,7 +22,8 @@
     <form method="post">
         <div class="mt-3 mb-1">
             <button type="submit" class="btn btn-danger col-5 col-sm-3 col-lg-2 me-2">Delete</button>
-            <a asp-page="../WorkEntries/Details" asp-route-id="@Model.EntryActionViewDto.WorkEntryId.ToString()" asp-fragment="@Model.EntryActionItemId.ToString()" class="btn btn-outline-secondary">Cancel</a>
+            <a asp-page="../WorkEntries/Details" asp-route-id="@Model.EntryActionViewDto.WorkEntryId.ToString()" 
+               asp-fragment="@Model.EntryActionItemId.ToString()" class="btn btn-outline-secondary">Cancel</a>
         </div>
         <input asp-for="EntryActionItemId" type="hidden" />
     </form>
