--- a/src/WebApp/Pages/Staff/EntryAction/Restore.cshtml
+++ b/src/WebApp/Pages/Staff/EntryAction/Restore.cshtml
@@ -1,8 +1,8 @@
-﻿@page "{actionId:guid?}"
+﻿@page "{actionId:Guid?}"
 @model RestoreActionModel
 
 @{
-    ViewData["Title"] = "Restore WorkEntry Action";
+    ViewData["Title"] = "Restore Action";
     ViewData["NoAnchors"] = "True";
 }
 
@@ -12,7 +12,7 @@
 
 <div class="p-3 border rounded-3 bg-dark-subtle text-dark-emphasis">
     <p class="lead text-danger-emphasis font-weight-medium">
-        Are you sure you want to restore this deleted WorkEntry Action?
+        Are you sure you want to restore this deleted Action?
     </p>
 
     <partial name="Shared/_ActionSummaryPartial" model="Model.EntryActionViewDto" />
