--- a/src/WebApp/Pages/Staff/WorkEntries/Reopen.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Reopen.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{id:int?}"
+﻿@page "{id:Guid?}"
 @using MyApp.WebApp.Pages.Shared.EditorTemplates
 @model ReopenModel
 
@@ -17,7 +17,7 @@
             @Html.EditorFor(model => model.EntryDto.Comments, EditorTemplate.Textarea, new { Rows = 3 })
         </div>
         <div class="mt-3 mb-1">
-            <button type="submit" class="btn btn-primary col-5 col-sm-3 col-lg-2 me-2">Approve</button>
+            <button type="submit" class="btn btn-primary col-5 col-sm-3 col-lg-2 me-2">Reopen</button>
             <a asp-page="Details" asp-route-id="@Model.EntryDto.WorkEntryId.ToString()" class="btn btn-outline-secondary">Cancel</a>
         </div>
         <input asp-for="EntryDto.WorkEntryId" type="hidden" />
