added .js code to all(?) pages with textarea. changed icon color

--- a/src/WebApp/Pages/Staff/WorkEntries/Delete.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Delete.cshtml
@@ -7,6 +7,12 @@
     ViewData["NoAnchors"] = "True";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/SimpleMDE.css"/>
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js" defer></script>
+    <script src="~/js/SimpleMDE.js" defer></script>
+</head>
+
 <h1>
     <em>Confirm</em> @ViewData["Title"]
 </h1>
