--- a/src/WebApp/Pages/Staff/WorkEntries/Add.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Add.cshtml
@@ -6,7 +6,7 @@
     ViewData["NoAnchors"] = "True";
 }
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css"/>
+    <link rel="stylesheet" href="~/css/SimpleMDE.css"/>
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js" defer></script>
     <script src="~/js/SimpleMDE.js" defer></script>
 </head>
@@ -20,8 +20,6 @@
                 <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
             </svg>
         </div>
-
-        <textarea id="MyID" rows="3"></textarea>
 
         <h2>Details</h2>
         <div class="row">
