--- a/src/WebApp/Pages/Staff/WorkEntries/Close.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Close.cshtml
@@ -7,6 +7,12 @@
     ViewData["NoAnchors"] = "True";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/SimpleMDE.css" />
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js" defer></script>
+    <script src="~/js/SimpleMDE.js" defer></script>
+</head>
+
 <h1>@ViewData["Title"]</h1>
 
 <div class="p-3 border rounded-3">
