--- a/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
@@ -10,6 +10,13 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<head>
+    <link rel="stylesheet" href="~/css/SimpleMDE.css"/>
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js" defer></script>
+    <script src="~/js/SimpleMDE.js" defer></script>
+</head>
+
+
 @if (Model.ItemView.IsDeleted && Model.UserCan[WorkEntryOperation.ManageDeletions])
 {
     <div class="callout callout-danger mb-3">
