--- a/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
@@ -92,7 +92,7 @@
     </dl>
 </div>
 
-<h2 class="h3">Notes</h2>
+<h2 class="h3"">Notes</h2>
 <p class="container text-break text-pre-line">
     @Html.Raw(MarkdownHelper.MarkdownToHtml(Model.ItemView.Notes ?? ""))
     </p>
