--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <partial name="_RaygunScriptsPartial" />
     <script src="~/js/color-modes.js"></script>
-    <link rel="stylesheet" href="~/css/SimpleMDE.css"/>
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+    @await RenderSectionAsync("Styles", false)
 </head>
 
 <body id="top" class="d-flex flex-column vh-100">
