Update JavaScript libraries and add SRI

--- a/src/WebApp/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,5 +1,7 @@
-﻿<script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+﻿<script src="~/lib/jquery-validate/jquery.validate.min.js"
+        integrity="sha512-3YmIbcnlj47HgW2BQGRbLVbzReKt4cASLxa3Z8QY9rohHbqLsuKeccNqFD2wNMfATqYcHCVxGKh5T/7tCWFIRw=="></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
+        integrity="sha512-xq+Vm8jC94ynOikewaQXMEkJIOBp7iArs3IhFWSWdRT3Pq8wFz46p+ZDFAR7kHnSFf+zUv52B3prRYnbDRdgog=="></script>
 <script>
     // Change validation classes to work with Bootstrap
     const settings = {
