--- a/src/WebApp/Pages/Shared/EditorTemplates/Textarea.cshtml
+++ b/src/WebApp/Pages/Shared/EditorTemplates/Textarea.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="form-floating">
-    <textarea asp-for="@__model" class="form-control EasyMDE-textarea" rows="@rows.ToString()"></textarea>
+    <textarea asp-for="@__model" class="form-control EasyMDE" rows="@rows.ToString()"></textarea>
     <label asp-for="@__model" class="form-label"></label>
     <span asp-validation-for="@__model" class="invalid-feedback"></span>
 </div>
