--- a/src/WebApp/Pages/Staff/WorkEntries/Delete.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Delete.cshtml
@@ -7,12 +7,6 @@
     ViewData["NoAnchors"] = "True";
 }
 
-<head>
-    <link rel="stylesheet" href="~/css/SimpleMDE.css"/>
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js" defer></script>
-    <script src="~/js/SimpleMDE.js" defer></script>
-</head>
-
 <h1>
     <em>Confirm</em> @ViewData["Title"]
 </h1>
@@ -37,3 +31,11 @@
         <input asp-for="EntryDto.WorkEntryId" type="hidden" />
     </form>
 </div>
+
+@section Scripts {
+    <script src="~/js/EasyMDE.js" defer></script>
+    <script src="~/js/textarea-to-MDE.js" defer></script>
+}
+@section Styles {
+    <link rel="stylesheet" href="~/css/EasyMDE.css"/>
+}
