Removed EasyMDE from Details and added to Edit

--- a/src/WebApp/Pages/Staff/WorkEntries/Edit.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Edit.cshtml
@@ -43,9 +43,10 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/js/EasyMDE.js" defer></script>
+    <script src="~/lib/easymde/dist/easymde.min.js"></script>
     <script src="~/js/textarea-to-MDE.js" defer></script>
 }
 @section Styles {
-    <link rel="stylesheet" href="~/css/EasyMDE.css"/>
+    <link rel="stylesheet" href="~/lib/easymde/dist/easymde.min.css" />
+    <link rel="stylesheet" href="~/css/easymde.darkmode.css" />
 }
