Removed unnecessary EasyMDE references in Close.cshtml. Removed Label for Textarea's using MDE

--- a/src/WebApp/Pages/Shared/EditorTemplates/Textarea.cshtml
+++ b/src/WebApp/Pages/Shared/EditorTemplates/Textarea.cshtml
@@ -7,6 +7,6 @@
 
 <div>
     <textarea asp-for="@__model" class="form-control markdown @if(MDE){@ClassMDE.ToString();}" rows="@rows.ToString()"></textarea>
-    <label asp-for="@__model" class="form-label"></label>
+    @if(!MDE){<label asp-for="@__model" class="form-label"></label>}
     <span asp-validation-for="@__model" class="invalid-feedback"></span>
 </div>
