Fix rendering of Bootstrap classes in Markdown output

--- a/src/WebApp/Pages/Staff/WorkEntries/Close.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Close.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{id:Guid?}"
+@page "{id:Guid?}"
 @using MyApp.WebApp.Pages.Shared.EditorTemplates
-@using MyApp.AppServices.Permissions.Helpers
+@using MyApp.WebApp.Platform.Rendering
 @model CloseModel
 
 @{
