--- a/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
@@ -3,7 +3,7 @@
 @using MyApp.AppServices.WorkEntries.Permissions
 @using MyApp.WebApp.Pages.Shared.DisplayTemplates
 @using MyApp.WebApp.Pages.Shared.EditorTemplates
-@using MyApp.AppServices.Permissions.Helpers
+@using MyApp.WebApp.Platform.Rendering
 @model DetailsModel
 @{
     ViewData["Title"] = $"WorkEntry ID {Model.ItemView.Id.ToString()}";
